--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "temp_react_app",
   "private": true,
   "version": "0.0.0",
+  "homepage": "https://tglkwon.github.io/Calchemy.io",
   "type": "module",
   "scripts": {
     "dev": "vite",
