feat: Introduce core game systems for effects, cards, and keywords, and add new game data.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Calchemy.io",
+  "name": "calchemy.io",
   "private": true,
   "version": "1.0.0",
   "homepage": "https://tglkwon.github.io/Calchemy.io",
